<resources>
    <string name="app_name">TechUtsav</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Bottom nav
    <string name="bottom_nav_event">Events</string>
    <string name="bottom_nav_gallery">Gallery</string>
    <string name="bottom_nav_alumni">Alumni</string>
    <string name="bottom_nav_about">About</string>

    //Top Nav
    <string name="top_nav_schedule">Schedule</string>
    <string name="top_nav_info">Developer</string>
    <string name="top_nav_registration">Registration Info</string>


    //TextPlaceHolder
    <string name="event_name_placeholder">EventName</string>

    //Gallery
    <string name="gallery_title">Gallery</string>

    //Alumni
    <string name="alumni_title">Alumni</string>
    <string name="alumni_name">Name</string>
    <string name="alumni_designation">Designation</string>
    <string name="alumni_quote">This is where the quote Go</string>


    //About
    <string name="about_title">About</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

    //Registration
    <string name="reg_toolbar_title">Registration</string>
    <string name="reg_msg">Will be Updated Soon</string>


    //DevInfoCard
    <string name="dev_name">Name</string>
    <string name="dev_designation">Designation</string>
    <string name="dev_dept">Department</string>
    <string name="dev_year">Year</string>

    //DevInfo
    <string name="dev_toolbar_title">Developers</string>




</resources>
