<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_event_btn"
        android:icon="@drawable/bottom_nav_event"
        android:title="@string/bottom_nav_event" />

    <item
        android:id="@+id/bottom_nav_gallery_btn"
        android:icon="@drawable/bottom_nav_gallery"
        android:title="@string/bottom_nav_gallery" />
    <item
        android:id="@+id/bottom_nav_schedule_btn"
        android:icon="@drawable/bottom_nav_alumni"
        android:title="@string/bottom_nav_alumni" />
    <item
        android:id="@+id/bottom_nav_info_btn"
        android:icon="@drawable/bottom_nav_about"
        android:title="@string/bottom_nav_about" />
</menu>