<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:layout_margin="4dp"
    app:cardCornerRadius="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp">

        <LinearLayout
            android:id="@+id/alumni_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/alumni_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:paddingTop="2dp"
                android:adjustViewBounds="true"
                android:layout_margin = "2dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/alumni_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:gravity="center"
                android:text="@string/alumni_name"
                android:textSize="18sp"
                android:textColor="#000000"
                android:fontFamily="@font/poppins_light"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/alumni_designation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:gravity="center"
                android:layout_margin="2dp"
                android:text="@string/alumni_designation"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:textColor="#000000"
                android:fontFamily="@font/poppins_light"/>

        </LinearLayout>

        <TextView
            android:id="@+id/alumni_quotes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/alumni_linear_layout"
            android:text="@string/alumni_quote"
            android:textStyle="italic"
            android:textColor="#000000"
            android:fontFamily="@font/poppins_light"/>






    </RelativeLayout>







</androidx.cardview.widget.CardView>