<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    app:cardCornerRadius="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="2dp">

        <LinearLayout
            android:id="@+id/alumni_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/alumni_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="2dp"
                android:adjustViewBounds="true"
                android:padding="4dp"
                android:scaleType="centerCrop"
                android:paddingTop="2dp" />

            <TextView
                android:id="@+id/alumni_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/alumni_name"
                android:textColor="@color/White"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alumni_designation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/alumni_designation"
                android:textColor="@color/White"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/alumni_quotes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/alumni_linear_layout"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/alumni_quote"
            android:textColor="@color/White"
            android:textStyle="italic" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>